--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,13 @@
     bottom: 0;
     width: 100%;
     height: 60px;
-    line-height: 60px;
     background-color: darkgrey;
 }
 
+#recent-table{
+    height: 28vh;
+    overflow-y: auto;
+    position: relative;
+    -webkit-mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
+    mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
+}
