--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,9 @@
     bottom: 0;
     width: 100%;
     height: 60px;
-    background-color: darkgrey;
+    /* background-color: darkgrey; */
+    background: linear-gradient(90deg, #007bff 50%, rgb(58, 58, 58) 50%);
+    color: white;
 }
 
 #recent-table{
@@ -43,31 +45,7 @@
     border-bottom: gainsboro dotted 1px;
 }
 
-.fruitveg {
-    background-color: red;
-}
-
-.frontshelves {
-    background-color: blue;
-}
-
-.fridges {
-    background-color: yellow;
-}
-
-.freezers {
-    background-color: purple;
-}
-
-.middleshelves {
-    background-color: green;
-}
-
-.endshelves {
-    background-color: pink;
-}
-
 .location {
-    border: solid black 2px;
-    width: 100px !important;
+    border: dashed black 2px;
+    white-space: nowrap;
 }
