--- a/assets/style.css
+++ b/assets/style.css
@@ -26,7 +26,7 @@
     background-image: url("https://bit.ly/2H4Q3AU");
     background-color: #cccccc;
     width: 100%;
-    height: 200px;
+    height: 13em;
     object-fit: cover;
     background-position: 80% 80%;
     background-repeat: no-repeat;
@@ -43,7 +43,7 @@
     float: none;
 }
 
-.star {
+.red-line {
     border-right: red double;
 }
 
@@ -56,3 +56,11 @@
     white-space: nowrap;
 }
 
+.favourite-field {
+    background: none;
+    border: none;
+}
+
+.favourite-enable {
+    color: rgb(255, 162, 0);
+}
