--- a/assets/style.css
+++ b/assets/style.css
@@ -56,6 +56,14 @@
     white-space: nowrap;
 }
 
+#fruits-veg-header {
+    width: 100%;
+}
+
+#accordion {
+    width: 100%;
+}
+
 .favourite-field {
     background: none;
     border: none;
