accordion opens one card at a time

--- a/assets/style.css
+++ b/assets/style.css
@@ -47,6 +47,7 @@
     border-right: red double;
 }
 
+/* Source: https://www.w3schools.com/css/css3_2dtransforms.asp */
 input[type="checkbox"] {
     transform:scale(1.5, 1.5);
     margin: 0px 10px;
