--- a/assets/style.css
+++ b/assets/style.css
@@ -23,14 +23,14 @@
 }
 
 #banner-img {
-    background-image: url("https://bit.ly/2H4Q3AU");
+    background-image: url("https://www.rnz.co.nz/assets/news/138751/eight_col_eight_col_38611885_ml.jpg?1516676824");
     background-color: #cccccc;
     width: 100%;
     height: 13em;
     object-fit: cover;
     background-position: 80% 80%;
     background-repeat: no-repeat;
-    border-radius: 8px 8px 0px 0px;
+    border-radius: 8px;
 }
 
 #location-nav {
